crates/ir/tests/ir/snapshots/main__ir__lower__data_types__match_multiple_in_function.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module data_types__match_multiple_in_function

type Option[x10] = Some#0(x10) | None#1
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn main() -> Unit =
  let_join v23(v0: Int) =
    let v3: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
    let v4: Unit = call println(v3, v0)
    let_join v22(v5: Int) =
      let v8: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v9: Unit = call println(v8, v5)
      let_join v21(v10: Int) =
        let v13: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
        let v14: Unit = call println(v13, v10)
        let_join v20(v15: Int) =
          let v18: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
          let v19: Unit = call println(v18, v15)
          v19
        in
        let v16: Option[Int] = construct Option::Some#0(4)
        switch v16 {
          0 (v17: Int) ->
            jump v20(v17)
          1 ->
            jump v20(0)
        }
      in
      let v11: Option[Int] = construct Option::Some#0(3)
      switch v11 {
        0 (v12: Int) ->
          jump v21(v12)
        1 ->
          jump v21(0)
      }
    in
    let v6: Option[Int] = construct Option::Some#0(2)
    switch v6 {
      0 (v7: Int) ->
        jump v22(v7)
      1 ->
        jump v22(0)
    }
  in
  let v1: Option[Int] = construct Option::Some#0(1)
  switch v1 {
    0 (v2: Int) ->
      jump v23(v2)
    1 ->
      jump v23(0)
  }
