crates/ir/tests/ir/snapshots/main__ir__lower__data_types__multi_new_objects.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module data_types__multi_new_objects

struct Point { x: Int, y: Int }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], u1, (u1, s1) -> u1) -> u1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[x7]) -> List[x7]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let v0: Point = construct Point(10, 20)
  let v1: Point = construct Point(30, 40)
  let v2: Int = project v0.0
  let v3: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v4: Unit = call println(v3, v2)
  let v5: Int = project v0.1
  let v6: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v7: Unit = call println(v6, v5)
  let v8: Int = project v1.0
  let v9: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v10: Unit = call println(v9, v8)
  let v12: Int = project v1.1
  let v11: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v13: Unit = call println(v11, v12)
  v13
