crates/ir/tests/ir/snapshots/main__ir__lower__data_types__nested_match.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module data_types__nested_match

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn apply_fn(v0: (l11) -> n11, v1: l11) -> n11 =
  let v2: n11 = call_closure v0(v1)
  v2

fn main() -> Unit =
  let v6: (Int) -> Int = make_closure(lambda$27, [])
  let v7: Int = call apply_fn(v6, 5)
  let v3: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v8: Unit = call println(v3, v7)
  v8

fn lambda$27(v4: Int) -> Int =
  let v5: Int = add_int(v4, 1)
  v5
