crates/ir/tests/ir/snapshots/main__ir__lower__data_types__nullary_singleton.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module data_types__nullary_singleton

type Option[x10] = None#0 | Some#1(x10)
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn unwrap_or(v0: Option[t11], v1: t11) -> t11 =
  switch v0 {
    0 ->
      v1
    1 (v2: t11) ->
      v2
  }

fn main() -> Unit =
  let v4: Option[w11] = construct Option::None#0()
  let v3: Option[w11] = v4
  let v5: Option[Int] = construct Option::Some#1(42)
  let v6: Int = call unwrap_or(v5, 0)
  let v7: Int = call unwrap_or(v3, v6)
  let v8: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v9: Unit = call println(v8, v7)
  v9
