crates/ir/tests/ir/snapshots/main__ir__lower__data_types__option_basic.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module data_types__option_basic

type Option[x10] = Some#0(x10) | None#1
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit

fn unwrap(v0: Option[Int]) -> Int =
  switch v0 {
    0 (v1: Int) ->
      v1
    1 ->
      0
  }

fn test() -> Int =
  let v2: Option[Int] = construct Option::Some#0(42)
  let v3: Int = call unwrap(v2)
  v3
