crates/ir/tests/ir/snapshots/main__ir__lower__data_types__or_pattern_basic.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module data_types__or_pattern_basic

type ABC = A#0 | B#1 | C#2
type Option[x10] = Some#0(x10) | None#1
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn classify(v0: ABC) -> String =
  switch v0 {
    0 ->
      "yes"
    1 ->
      "yes"
    2 ->
      "no"
  }

fn classify_nested(v1: Option[ABC]) -> String =
  switch v1 {
    0 (v2: x10) ->
      switch v2 {
        0 ->
          "yes"
        1 ->
          "yes"
        _ ->
          "no"
      }
    _ ->
      "no"
  }

fn main() -> Unit =
  let v3: ABC = construct ABC::A#0()
  let v4: String = call classify(v3)
  let v5: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v6: Unit = call println(v5, v4)
  let v7: ABC = construct ABC::C#2()
  let v8: String = call classify(v7)
  let v9: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v10: Unit = call println(v9, v8)
  let v12: ABC = construct ABC::B#1()
  let v13: Option[ABC] = construct Option::Some#0(v12)
  let v14: String = call classify_nested(v13)
  let v11: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v15: Unit = call println(v11, v14)
  v15
