crates/ir/tests/ir/snapshots/main__ir__lower__data_types__or_pattern_binding.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module data_types__or_pattern_binding

type Wrapper[x10] = Some#0(x10) | Wrap#1(x10)
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn extract(v0: Wrapper[s11]) -> s11 =
  switch v0 {
    0 (v1: s11) ->
      v1
    1 (v2: s11) ->
      v2
  }

fn main() -> Unit =
  let v3: Wrapper[Int] = construct Wrapper::Some#0(3)
  let v4: Int = call extract(v3)
  let v5: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v6: Unit = call println(v5, v4)
  let v8: Wrapper[Int] = construct Wrapper::Wrap#1(5)
  let v9: Int = call extract(v8)
  let v7: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v10: Unit = call println(v7, v9)
  v10
