crates/ir/tests/ir/snapshots/main__ir__lower__data_types__or_pattern_literals.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module data_types__or_pattern_literals

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn classify(v0: Int) -> String =
  let v3: Bool = eq_int(v0, 1)
  if v3 {
    "small"
  } else {
    let v2: Bool = eq_int(v0, 2)
    if v2 {
      "small"
    } else {
      let v1: Bool = eq_int(v0, 3)
      if v1 {
        "small"
      } else {
        "big"
      }
    }
  }

fn main() -> Unit =
  let v4: String = call classify(1)
  let v5: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v6: Unit = call println(v5, v4)
  let v7: String = call classify(2)
  let v8: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v9: Unit = call println(v8, v7)
  let v10: String = call classify(3)
  let v11: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v12: Unit = call println(v11, v10)
  let v14: String = call classify(99)
  let v13: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v15: Unit = call println(v13, v14)
  v15
